--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                             <i class="fa fa-chart-line fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Financial Analaysis</h3>
+                            <h3>Knowledge management</h3>
                             <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                             <i class="fa fa-balance-scale fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>legal Advisory</h3>
+                            <h3>RMA &MDR</h3>
                             <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
                         </div>
                     </div>
@@ -265,7 +265,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Business Research</h3>
+                    <h3 class="mb-3">Smart Stadium</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-chart-pie fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Stretagic Planning</h3>
+                    <h3 class="mb-3">Contact Tracing</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
@@ -283,7 +283,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-chart-line fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Market Analysis</h3>
+                    <h3 class="mb-3">Digitalization of Handwritten text</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
@@ -292,7 +292,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-chart-area fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Financial Analaysis</h3>
+                    <h3 class="mb-3">Knowledge management</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
@@ -301,7 +301,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-balance-scale fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">legal Advisory</h3>
+                    <h3 class="mb-3">RMA &MDR</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-house-damage fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Tax & Insurance</h3>
+                    <h3 class="mb-3">Application Replatform</h3>
                     <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
                 </div>
             </div>
