--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         <div class="row g-0">
             <div class="col-lg-14" style="min-height: 700px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute w-100 h-100" src="img/journey.jpg" style="object-fit: cover;">
+                    <img class="position-absolute w-100 h-100" src="img/Journey.jpg" style="object-fit: cover;">
                 </div>
             </div>
         </div>
