--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-1.jpg" alt="">
+                        <img class="img-fluid" src="img/smart.jpg" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -503,7 +503,7 @@
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h4" href="">SMART STADIUM</a>
                         </div>
                     </div>
                 </div>
@@ -511,7 +511,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-2.jpg" alt="">
+                        <img class="img-fluid" src="img/tesco.jpg" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -524,7 +524,7 @@
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h4" href="">TESCO EXTRA</a>
                         </div>
                     </div>
                 </div>
@@ -532,7 +532,7 @@
             <div class="col-lg-4">
                 <div class="blog-item">
                     <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="img/blog-3.jpg" alt="">
+                        <img class="img-fluid" src="img/ayodh.jpg" alt="">
                     </div>
                     <div class="bg-secondary d-flex">
                         <div class="flex-shrink-0 d-flex flex-column justify-content-center text-center bg-primary text-white px-4">
@@ -545,7 +545,7 @@
                                 <small class="text-uppercase me-3"><i class="bi bi-person me-2"></i>Admin</small>
                                 <small class="text-uppercase me-3"><i class="bi bi-bookmarks me-2"></i>Web Design</small>
                             </div>
-                            <a class="h4" href="">Magna sea dolor ipsum amet lorem eos</a>
+                            <a class="h4" href="">AAROGYA SETU</a>
                         </div>
                     </div>
                 </div>
