--- a/index.html
+++ b/index.html
@@ -412,10 +412,10 @@
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                    <img class="img-fluid w-100" src="img/Sudheer.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
+                        <h3 class="text-white">Sudheer</h3>
+                        <p class="text-white text-uppercase mb-0">Solution Architecture</p>
                     </div>
                 </div>
             </div>
